# Numerical-Optimization-in-Robotics

./: README.md
Project/: Declaration.txt
Project/Project_Solution_1/Project_1/: readme.md
Project/Project_Solution_1/Project_1/.catkin_tools/profiles/default/: devel_collisions.txt
Project/Project_Solution_1/Project_1/src/Topp/: CMakeLists.txt
Project/Project_Solution_1/Project_1/src/Topp/config/: topp.rviz
Project/Project_Solution_1/Project_1/src/Topp/include/: cubic_spline_banded_test.h  polymap.hpp  topp.h
Project/Project_Solution_1/Project_1/src/Topp/include/support/: banded_system.h  cubic_spline.h  geo_utils.hpp  lbfgs.hpp  map_gen.h  visualizer.hpp
Project/Project_Solution_1/Project_1/src/Topp/launch/: cubic_test.launch
Project/Project_Solution_1/Project_1/src/Topp/src/: Conic-alm.cpp  cubic_test.cpp  test.cpp
Project/Project_Solution_2/: link.txt
